2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-06-05  Gediminas Paulauskas <menesis@delfi.lt>

	* background-properties.glade: radiobutton1 and similar things should
	not be translatable.

2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * background-properties-capplet.c : Changed the help file link
          to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* background-properties-capplet.c (cb_dialog_response) : improve
	  handling of help failures.

Sun May 26 11:29:14 2002  Jonathan Blandford  <jrb@gnome.org>

	* background-properties-capplet.c (main): use APPID instead of
	argv[0]

Thu May 16 02:25:03 2002  Jonathan Blandford  <jrb@gnome.org>

	* background-properties-capplet.c (drag_data_received_cb): accept
	drops from the nautilus patterns pallet.  There's something broken
	here, though.

2002-05-10  Jody Goldberg <jody@gnome.org>

	* background-properties.glade : merge in the missing atk patch.

2002-05-09  Jody Goldberg <jody@gnome.org>

	* background-properties-capplet.c (main) : add a help button.

2002-05-02  Dennis Cranston <dennis_cranston@yahoo.com>

 	* background-properties.glade: add a stock information image
	to the "You can drag image files..." text.

2002-05-08  Jody Goldberg <jody@gnome.org>

	* background-properties-capplet.c (cb_dialog_response) : new.
	(main) : support help.

2002-04-27  Seth Nickell  <snickell@stanford.edu>

	* background.desktop.in:

	Improve the comment.

2002-04-21  Rachel Hestilow  <hestilow@ximian.com>

	* background-properties-capplet.c (setup_dialog): Update for
	new enum peditor prototypes.

Wed Apr 10 18:06:35 2002  Jonathan Blandford  <jrb@gnome.org>

	* background.desktop.in (Exec): s/gnome2/gnome

Mon Apr  1 19:19:39 2002  Jonathan Blandford  <jrb@redhat.com>

	* background-properties-capplet.c (dialog_button_clicked_cb):
	handle GTK_RESPONSE_DELETE_EVENT

	* Makefile.am (bin_PROGRAMS):