@@ -251,7 +251,7 @@ background picture.</property>
 	      <child>
 		<widget class="GtkLabel" id="border_shading_label">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Bor_der the picture with a:</property>
+		  <property name="label" translatable="yes">Picture bor_der:</property>
 		  <property name="use_underline">True</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
