@@ -1,3 +1,12 @@
+2002-06-18  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=85628
+	* background-properties-capplet.c (main) : The dialog
+	    - should not be modal
+	    - has no parent to destroy with
+	    - and should have a seperator
+	    - set default response
+
 2002-06-17  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.0
